Fix webgl on mobile; no webgl kids

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ body {
 }
 .wrapper{
 }
+.first-page {
+  min-height:100%;
+}
 
 .wrapper > * {
   background  : #fff;
